--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTMl structure example using semantic HTML elements">
+    <meta name="author" content="Kristin Lindberg">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="Basic Logo" width="128" height="128">
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="https://www.byupathway.edu/">BYU Pathway</a></li>
+            <li><a href="https://www.byuh.edu/">BYU Hawaii</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, cupiditate.</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, eum.</p>
+        </section>
+    </main>
+
+    <aside>
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/laie-hawaii/800x500/laie-temple-772761-wallpaper.jpg"
+            alt="Laie Hawaii Temple" width="200">
+    </aside>
+    <footer>
+        <p>Kristin Lindberg</p>
+    </footer>
+
 </body>
+
 </html>
