week 2 index page update

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kristin Lindberg | WDD 130</title>
+    <meta name="description"
+        content="This is the home page of Kristin Lindberg for BYU Pathway class WDD130, to learn web development.">
+    <meta name="author" content="Kristin Lindberg">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -23,6 +26,13 @@
         <p>Hi, my name is Kristin Lindberg. I am learning Web Development and Software Development at BYU Idaho, through
             BYU Pathway.</p>
     </main>
+
+    <aside>
+        <h2>Utah</h2>
+        <img src="images/arches_national_park.jpg" alt="Arches National Park">
+        <p>Utah is a landlocked state in the Mountain West subregion of the Western United States. It is one of the Four
+            Corners states, sharing a border with Arizona, Colorado, and New Mexico.</p>
+    </aside>
 
     <footer>
         <p>&copy;2025 | Kristin Lindberg | Eagle Mountain, Utah</p>
