code along week 3

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!--11/10/2025-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,20 +19,31 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://linkedin.com">LinkedIn</a>
+            <a href="https://www.facebook.com/kristin.lindberg421">Facebook Profile</a>
         </nav>
     </header>
 
     <main>
         <h1>Kristin Lindberg | WDD 130</h1>
         <img src="images/profile.jpg" alt="Kristin Lindberg" width="200">
-        <p>Hi, my name is Kristin Lindberg. I am learning Web Development and Software Development at BYU Idaho, through
-            BYU Pathway.</p>
+        <p>Hi, my name is Kristin Lindberg. I am learning Web Development and Software Development at BYU Idaho, through BYU Pathway. I am married with two kids, a boy and a girl. We have a dog named Minnie, who is half French Bulldog and half Boston Terrier. I enjoy playing video games, table top games, doing puzzles, and watching movies and TV shows with my family. We live in Eagle Mountain, UT. I married my husband in the St. George, UT Temple in 2008. Both of our kids were born in St. George. I was born in Las Vegas, NV. I grew up in Chandler, AZ. I am the oldest of five kids. My three brothers came next, and my sister came 15 years after me. My husband was born in Canoga Park, CA and is the middle of three brothers. </p>
+        <ul class="box indent">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/st.-george-utah-temple?lang=eng"
+                    target="_blank">St. George, UT Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/las-vegas-nevada-temple?lang=eng"
+                    target="_blank">Las Vegas, NV Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/laie-hawaii-temple?lang=eng"
+                    target="_blank">Laie, HI Temple</a></li>
+        </ul>
+
     </main>
 
-    <aside>
+    <aside class="box">
         <h2>Utah</h2>
-        <img src="images/arches_national_park.jpg" alt="Arches National Park">
-        <p>Utah is a landlocked state in the Mountain West subregion of the Western United States. It is one of the Four
+        <img src=" images/arches_national_park.jpg" alt="Arches National Park">
+        <p>Utah is a landlocked state in the Mountain West subregion of the Western United States. It is one
+            of the Four
             Corners states, sharing a border with Arizona, Colorado, and New Mexico.</p>
     </aside>
 
