--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,7 +24,7 @@
     <main>
         <div class="hero">
             <img src="images/wwr-hero.jpg" alt="People rafting on a river">
-            <h1>Whitewater Rafting</h1>
+            <h1>About Us - Whitewater Rafting</h1>
             <article>
                 <img src="images/happy-rafting.jpg" alt="A happy client rafting">
                 <p>
