wwr week 4 update

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,12 +32,27 @@
                 </p>
             </article>
         </div>
-        <section>
+        <section class="history">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eum iusto repellat expedita beatae, dolorum maiores
+                fugiat ipsum natus reiciendis sequi eaque pariatur placeat iure vero. Similique ab eos veritatis!</p>
             <h2>History</h2>
+            <img src="images/rafting_history.jpg" alt="Rafts on a river bank">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eum iusto repellat expedita beatae, dolorum maiores fugiat ipsum natus reiciendis sequi eaque pariatur placeat iure vero. Similique ab eos veritatis!</p>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
+            <figure>
+                <img src="images/rafting_1.jpg" alt="Rapid Reckoning">
+                <figcaption>Rapid Reckoning</figcaption>
+                <img src="images/rafting_2.jpg" alt="Whitewater Whirlwind">
+                <figcaption>Water Whirlwind</figcaption>
+                <img src="images/rafting_3.jpg" alt="Canyon Surge">
+                <figcaption>Canyon Surge</figcaption>
+                <img src="images/rafting_4.jpg" alt="Canyon Surge">
+                <figcaption>Splash Odyssey</figcaption>
+                <img src="images/rafting_5.jpg" alt="Rogue River">
+                <figcaption>Rogue River</figcaption>
+            </figure>
         </section>
     </main>
 
