week 4 wwr  fixes

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -44,12 +44,20 @@
             <figure>
                 <img src="images/rafting_1.jpg" alt="Rapid Reckoning">
                 <figcaption>Rapid Reckoning</figcaption>
+            </figure>
+            <figure>
                 <img src="images/rafting_2.jpg" alt="Whitewater Whirlwind">
                 <figcaption>Water Whirlwind</figcaption>
+            </figure>
+            <figure>
                 <img src="images/rafting_3.jpg" alt="Canyon Surge">
                 <figcaption>Canyon Surge</figcaption>
+            </figure>
+            <figure>
                 <img src="images/rafting_4.jpg" alt="Canyon Surge">
                 <figcaption>Splash Odyssey</figcaption>
+            </figure>
+            <figure>
                 <img src="images/rafting_5.jpg" alt="Rogue River">
                 <figcaption>Rogue River</figcaption>
             </figure>
