--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Whitewater Rafting</title>
+    <title>About Us - Whitewater Rafting Co.</title>
     <meta name="description" content="This page provides an overview, information about its owners and staff, and basic trip summaries.">
     <meta name="author" content="Kristin Lindberg">
     <link rel="stylesheet" href="styles/rafting.css">
@@ -24,7 +24,7 @@
     <main>
         <div class="hero">
             <img src="images/wwr-hero.jpg" alt="People rafting on a river">
-            <h1>Whitewater Rafting</h1>
+            <h1>Whitewater Rafting Co.</h1>
             <article>
                 <img src="images/happy-rafting.jpg" alt="A happy client rafting">
                 <p>
@@ -65,7 +65,7 @@
     </main>
 
     <footer>
-        <p>&copy;2025 | Whitewater Rafting | Kristin Lindberg</p>
+        <p>&copy;2025 | Whitewater Rafting Co. | Kristin Lindberg</p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
                 <img src="images/facebook.svg" alt="Facebook Icon">
