week 5 wwr fixes

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="form-item column2">
                     <label for="email">Email:</label>
-                    <input type="email" id="useremail" name="useremail" required>
+                    <input type="email" id="email" name="email" required>
                 </div>
                 <fieldset class="radio-group">
                     <h3>Message Purpose</h3>
@@ -86,11 +86,11 @@
         <section class="employees">
             <h2>We Are Here to Serve You</h2>
             <figure>
-                <img src="images/dallin_oaks_official_portrait_2018.webp" alt="Dallin H. Oaks">
+                <img src="images/dallin_h_oaks.webp" alt="Dallin H. Oaks">
                 <figcaption>Dallin H. Oaks, President</figcaption>
             </figure>
             <figure>
-                <img src="images/henry_eyring_official_portrait_2018.webp" alt="Henry B. Eyring">
+                <img src="images/henry_b_eyring.webp" alt="Henry B. Eyring">
                 <figcaption>Henry B. Eyring, First Counselor</figcaption>
             </figure>
             <figure>
