--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Whitewater Rafting Co.</title>
-    <meta name="description" content="This page provides an overview, information about its owners and staff, and basic trip summaries.">
+    <meta name="description" content="This page provides the history and trip names for Whitewater Rafting Co.">
     <meta name="author" content="Kristin Lindberg">
     <link rel="stylesheet" href="styles/rafting.css">
 
@@ -28,16 +28,19 @@
             <article>
                 <img src="images/happy-rafting.jpg" alt="A happy client rafting">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ducimus sapiente id maxime aut sit laudantium, doloribus quia corporis expedita atque ratione voluptas hic, delectus voluptatum. Harum voluptas distinctio iusto.
+                    Experience the thrill of whitewater rafting as you paddle through roaring rapids and breathtaking scenery. Our expert guides ensure every trip is safe, exciting, and tailored to adventurers of all skill levels. From family‑friendly floats to adrenaline‑packed runs, unforgettable river memories await—are you ready to dive in?
                 </p>
             </article>
         </div>
         <section class="history">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eum iusto repellat expedita beatae, dolorum maiores
-                fugiat ipsum natus reiciendis sequi eaque pariatur placeat iure vero. Similique ab eos veritatis!</p>
+            <p>
+                Whitewater Rafting Co. began in the early 1980s when a small group of river enthusiasts decided to share their love of adventure with others. With only a few rafts and a single mountain route, they built a reputation for safety, skill, and unforgettable experiences.
+            </p>
             <h2>History</h2>
             <img src="images/rafting_history.jpg" alt="Rafts on a river bank">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eum iusto repellat expedita beatae, dolorum maiores fugiat ipsum natus reiciendis sequi eaque pariatur placeat iure vero. Similique ab eos veritatis!</p>
+            <p>
+                As demand grew, the company expanded into multi‑day expeditions, eco‑tours, and specialized outings for schools and corporate groups. Their commitment to environmental stewardship and community partnerships set them apart from competitors.
+            </p>
         </section>
         <section class="adventure">
             <h2>Adventure Awaits You!</h2>
