week 6 project update 1

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -37,7 +37,7 @@
                 Whitewater Rafting Co. began in the early 1980s when a small group of river enthusiasts decided to share their love of adventure with others. With only a few rafts and a single mountain route, they built a reputation for safety, skill, and unforgettable experiences.
             </p>
             <h2>History</h2>
-            <img src="images/rafting_history.jpg" alt="Rafts on a river bank">
+            <img src="images/rafting-history.jpg" alt="Rafts on a river bank">
             <p>
                 As demand grew, the company expanded into multi‑day expeditions, eco‑tours, and specialized outings for schools and corporate groups. Their commitment to environmental stewardship and community partnerships set them apart from competitors.
             </p>
@@ -45,23 +45,23 @@
         <section class="adventure">
             <h2>Adventure Awaits You!</h2>
             <figure>
-                <img src="images/rafting_1.jpg" alt="Rapid Reckoning">
+                <img src="images/rafting-1.jpg" alt="Rapid Reckoning Trip">
                 <figcaption>Rapid Reckoning</figcaption>
             </figure>
             <figure>
-                <img src="images/rafting_2.jpg" alt="Whitewater Whirlwind">
+                <img src="images/rafting-2.jpg" alt="Water Whirlwind Trip">
                 <figcaption>Water Whirlwind</figcaption>
             </figure>
             <figure>
-                <img src="images/rafting_3.jpg" alt="Canyon Surge">
+                <img src="images/rafting-3.jpg" alt="Canyon Surge Trip">
                 <figcaption>Canyon Surge</figcaption>
             </figure>
             <figure>
-                <img src="images/rafting_4.jpg" alt="Canyon Surge">
+                <img src="images/rafting-4.jpg" alt="Splash Odyssey Trip">
                 <figcaption>Splash Odyssey</figcaption>
             </figure>
             <figure>
-                <img src="images/rafting_5.jpg" alt="Rogue River">
+                <img src="images/rafting-5.jpg" alt="Rogue River Trip">
                 <figcaption>Rogue River</figcaption>
             </figure>
         </section>
