--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -86,15 +86,15 @@
         <section class="employees">
             <h2>We Are Here to Serve You</h2>
             <figure>
-                <img src="images/dallin_h_oaks.webp" alt="Dallin H. Oaks">
+                <img src="images/dallin-h-oaks.webp" alt="Dallin H. Oaks">
                 <figcaption>Dallin H. Oaks, President</figcaption>
             </figure>
             <figure>
-                <img src="images/henry_b_eyring.webp" alt="Henry B. Eyring">
+                <img src="images/henry-b-eyring.webp" alt="Henry B. Eyring">
                 <figcaption>Henry B. Eyring, First Counselor</figcaption>
             </figure>
             <figure>
-                <img src="images/d_todd_christofferson.webp" alt="D. Todd Christofferson">
+                <img src="images/d-todd-christofferson.webp" alt="D. Todd Christofferson">
                 <figcaption>D. Todd Christofferson, Second Counselor</figcaption>
             </figure>
         </section>
