--- a/wwr/index.html
+++ b/wwr/index.html
@@ -40,14 +40,14 @@
             <h2>What We Do!</h2>
             <figure>
                 <figcaption>Our Purpose</figcaption>
-                <img src="images/rafting_purpose.jpg" alt="Our Purpose">
+                <img src="images/rafting-purpose.jpg" alt="People rafting">
                 <p>
                     At Whitewater Rafting Co., our purpose is to connect people with the thrill of the river while fostering respect for the outdoors. We believe adventure should be safe, accessible, and unforgettable—whether you’re a first‑time paddler or a seasoned explorer. Every trip is designed to inspire camaraderie, confidence, and a deeper appreciation for the wild beauty of our rivers.
                 </p>
             </figure>
             <figure>
                 <figcaption>Our Offerings</figcaption>
-                <img src="images/rafting_offerings.jpg" alt="Our Offerings">
+                <img src="images/rafting-offerings.jpg" alt="People rafting">
                 <p>
                     From half‑day floats to multi‑day canyon expeditions, Whitewater Rafting Co. offers adventures for every level of excitement. Choose from family‑friendly journeys, adrenaline‑packed rapid runs, or scenic eco‑tours that highlight local wildlife and landscapes. With expert guides, top‑quality gear, and flexible packages, we make it easy to find the perfect rafting experience for you.
                 </p>
