--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -40,21 +40,21 @@
             <h2>Our Most Popluar Trips</h2>
             <figure>
                 <figcaption>Rapid Reckoning</figcaption>
-                <img src="images/rafting_1.jpg" alt="Rapid Reckoning">
+                <img src="images/rafting-1.jpg" alt="Rapid Reckoning Trip">
                 <p>
                     Brace yourself for a heart‑pounding ride through Class IV rapids where teamwork and quick reflexes are the keys to success. This trip is designed for thrill‑seekers who want to test their limits against the river’s raw power.
                 </p>
             </figure>
             <figure>
                 <figcaption>Water Whirlwind</figcaption>
-                <img src="images/rafting_2.jpg" alt="Whitewater Whirlwind">
+                <img src="images/rafting-2.jpg" alt="Water Whirlwind Trip">
                 <p>
                     Spin, splash, and surge through twisting currents that keep paddlers on their toes from start to finish. Perfect for adventurous groups, this trip combines unpredictable waves with breathtaking scenery for an unforgettable day.
                 </p>
             </figure>
             <figure>
                 <figcaption>Canyon Surge</figcaption>
-                <img src="images/rafting_3.jpg" alt="Canyon Surge">
+                <img src="images/rafting-3.jpg" alt="Canyon Surge Trip">
                 <p>
                     Journey deep into rugged canyons where towering cliffs frame a mix of calm stretches and explosive rapids. This trip blends natural beauty with adrenaline, offering both serene moments and exhilarating challenges.
                 </p>
