week 6 project updates 2

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -55,11 +55,7 @@
         </section>
 
         <div class="home-grid">
-            <h3>
-                <p>
-                    Visit the <a href="trips.html">Trips</a> page to view the adventures you can have with us!
-                </p>
-            </h3>
+            <h3>Visit the <a href="trips.html">Trips</a> page to view the adventures you can have with us!</h3>
         
             <form>
                 <label for="name">Name:</label>
