--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -119,11 +119,7 @@
             </table>
         </div>
 
-        <h3 class="line">
-            <p>
-                Ready to take a trip? Click here to <a href="contact.html">Contact Us.<a>
-            </p>
-        </h3>
+        <h3 class="line">Ready to take a trip? Click here to <a href="contact.html">Contact Us.<a></h3>
 
     </main>
 
